# qolsysgw-xfinity

./: README.md  pyproject.toml
apps/xfinitygw/: gateway.py
apps/xfinitygw/mqtt/: exceptions.py  listener.py
apps/xfinitygw/xfinity/: config.py  control.py  events.py  exceptions.py  socket.py  state.py  utils.py
