[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xfinity"
description = "Xfinity Cable Box Control4 gateway API"
dynamic = ["version"]
dependencies = ["websockets"]
requires-python = ">=3.8"
authors = [
  {name = "TRusselo"}
]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["xfinity", "cable box", "control4", "gateway", "api"]
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 4 - Beta",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",

  # Pick your license as you wish (see also "license" above)
  "License :: OSI Approved :: MIT License",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/TRusselo/xfinitygw"
Documentation = "https://github.com/TRusselo/xfinitygw"
Repository = "https://github.com/TRusselo/xfinitygw.git"
Issues = "https://github.com/TRusselo/xfinitygw/issues"
Changelog = "https://github.com/TRusselo/xfinitygw/commits/main/"

[tool.hatch.version]
path = "build_version.py"

[tool.hatch.build]
skip-excluded-dirs = true

[tool.hatch.build.targets.sdist]
packages = ["apps/xfinitygw/xfinity"]
only-include = ["apps/xfinitygw/xfinity"]
sources = ["apps/xfinitygw"]

[tool.hatch.build.targets.wheel]
packages = ["apps/xfinitygw/xfinity"]
only-include = ["apps/xfinitygw/xfinity"]
sources = ["apps/xfinitygw"]
